feat: passwords addes successfully feat: stressTest overhaul